Cleaned old example code and added "Classify" button to top bar

--- a/snakeeyes/blueprints/datahandling/templates/datahandling/loaddata.html
+++ b/snakeeyes/blueprints/datahandling/templates/datahandling/loaddata.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<bold>Loading this page loads file testdata.csv, but doesn't make multiple instances of same data rows (uses url as unique identifier)</bold>
+<bold>Loading this page loads file testdata.csv, but doesn't make multiple instances of same data rows (uses title as unique identifier)</bold>
 
   <hr/>
   <a href="{{ url_for('sitemind.index') }}" class="btn btn-primary">
