--- a/snakeeyes/blueprints/sitemind/templates/sitemind/selections.html
+++ b/snakeeyes/blueprints/sitemind/templates/sitemind/selections.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 
-{% block title %}Testing to bring Sitemind UI into being{% endblock %}
+{% block title %}Sitemind Coder{% endblock %}
 {% block body %}
 
 
