--- a/snakeeyes/blueprints/page/templates/page/home.html
+++ b/snakeeyes/blueprints/page/templates/page/home.html
@@ -7,32 +7,15 @@ outcome of a dice roll. Win points and dominate the leaderboard.{% endblock %}
 {% block body %}
   <div class="container sm-margin-top">
     <div class="row text-center lg-margin-bottom">
-      <h1>Feeling lucky?</h1>
+      <h1>Some intelligent text here</h1>
       <h3 class="text-muted">
-        Test your luck against the roll of the dice and win today
+        More lorem ipsum dolorettes hipsum
       </h3>
     </div>
-    <div class="row text-center">
-      <div class="col-lg-4">
-        <i class="fa fa-fw fa-4x fa-bullhorn text-primary"></i>
-        <h2>Place bets</h2>
-        <p class="text-muted">Correctly guess the dice's roll.</p>
-        <p>
-          <a href="{{ url_for('user.signup') }}" class="btn btn-default">Sign up</a>
-        </p>
-      </div>
       <div class="col-lg-4">
         <i class="fa fa-fw fa-4x fa-database text-primary"></i>
-        <h2>Win currency</h2>
-        <p class="text-muted">Gain coins if your guess is correct.</p>
-        <p>
-          <a href="{{ url_for('user.signup') }}" class="btn btn-default">Sign up</a>
-        </p>
-      </div>
-      <div class="col-lg-4">
-        <i class="fa fa-fw fa-4x fa-trophy text-primary"></i>
-        <h2>Leaderboard</h2>
-        <p class="text-muted">Compare your results to others.</p>
+        <h2>Sitemind Coder</h2>
+        <p class="text-muted">Classify news articles.</p>
         <p>
           <a href="{{ url_for('user.signup') }}" class="btn btn-default">Sign up</a>
         </p>
