--- a/snakeeyes/blueprints/user/templates/user/welcome.html
+++ b/snakeeyes/blueprints/user/templates/user/welcome.html
@@ -6,23 +6,18 @@
 {% block body %}
   <div class="row">
     <div class="col-md-5">
-      <h2 class="sm-margin-bottom">Ready to upgrade?</h2>
+      <h2 class="sm-margin-bottom">Pick a username</h2>
 
       <p class="margin-bottom">
-        Hi. You're only about a minute away from being a paid member which
-        provides you many amazing things.
+        Lorem ipsum..
       </p>
 
-      <p class="small">
-        Take a look at what you'll gain by
-        <a href="{{ url_for('billing.pricing') }}">becoming a paid member</a>.
-      </p>
     </div>
     <div class="col-md-5 col-md-push-1 col-md-offset-1 well">
       {% call f.form_tag('user.welcome') %}
         <legend>Pick a username</legend>
         <p class="small help-block sm-margin-bottom">
-          You can only pick this once, it will be your name on the leaderboard.
+          Classifications you do will be marked with this username.
         </p>
 
         {% call f.form_group(form.username, css_class='sm-margin-bottom',
