Changes to domain settings.

--- a/snakeeyes/blueprints/page/templates/page/home.html
+++ b/snakeeyes/blueprints/page/templates/page/home.html
@@ -1,15 +1,14 @@
 {% extends 'layouts/app.html' %}
 
-{% block title %}Test your luck against the roll of the dice{% endblock %}
-{% block meta_description %}Compete against yourself and others by guessing the
-outcome of a dice roll. Win points and dominate the leaderboard.{% endblock %}
+{% block title %}Sitemind Coder{% endblock %}
+{% block meta_description %}Classify news articles.{% endblock %}
 
 {% block body %}
   <div class="container sm-margin-top">
     <div class="row text-center lg-margin-bottom">
-      <h1>Some intelligent text here</h1>
+      <h1>Some nice headline</h1>
       <h3 class="text-muted">
-        More lorem ipsum dolorettes hipsum
+        More information..
       </h3>
     </div>
       <div class="col-lg-4">
